--- a/boke/src/main/resources/static/style/css/lazyload.css
+++ b/boke/src/main/resources/static/style/css/lazyload.css
@@ -3326,7 +3326,7 @@ a:hover, a:active {
 
 .site-content {
     max-width: 1200px;
-    padding: 0 10px;
+    /*padding: 0 10px;*/
     margin-left: auto;
     margin-right: auto;
     background-color: rgba(255, 255, 255, .8)
@@ -5750,7 +5750,7 @@ a.page-numbers {
 }
 
 .comment-respond textarea {
-    background-image: url("../images/h84032016p0.png");
+    background-image: url("../images/drillfinish.png");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: right;
