--- a/boke/src/main/resources/templates/common.html
+++ b/boke/src/main/resources/templates/common.html
@@ -2,46 +2,43 @@
 <html lang="zh_CN" xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="header(title)">
     <meta charset="UTF-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="theme-color" content="#fff">
-    <meta http-equiv="Cache-Control" content="no-transform">
-    <meta http-equiv="Cache-Control" content="no-siteapp">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link href="style/css/all.min.css" rel="stylesheet" type="text/css">
+    <link href="/style/images/favicon.ico" rel="icon" type="image/x-icon">
+    <link href="style/css/all.min.css" rel="stylesheet" type="text/css"><!-- 加载缓慢 -->
     <link href="style/css/share.min.css" rel="stylesheet" type="text/css">
-    <link rel='stylesheet' href='lls/main.css' type='text/css' />
-    <link href="style/css/main.css" rel="stylesheet" type="text/css">
-    <link href="style/css/lazyload.css" rel="stylesheet" type="text/css">
+    <link rel='stylesheet' href='lls/main.min.css' type='text/css' /><!-- 加载缓慢 -->
+    <link href="style/css/main.min.css" rel="stylesheet" type="text/css"><!-- 加载缓慢 -->
+    <link href="style/css/lazyload.min.css" rel="stylesheet" type="text/css"><!-- 加载缓慢 -->
     <!-- 在页面末尾直接添加用于个人栏和返回顶部的动态显示  -->
-<!--    <script type="text/javascript" src="style/js/sagiri.min.js"></script>-->
+    <!--    <script type="text/javascript" src="style/js/sagiri.min.js"></script>-->
     <!--看板娘js-->
-   <!-- <link rel="stylesheet" type="text/css" href="assets/waifu.css"/>
-    <script src="assets/autoload.js" type="text/javascript"></script>
-    <script src="assets/waifu-tips.js"></script>
-    <script src="assets/live2d.js"></script>-->
+    <!-- <link rel="stylesheet" type="text/css" href="assets/waifu.css"/>
+     <script src="assets/autoload.js" type="text/javascript"></script>
+     <script src="assets/waifu-tips.js"></script>
+     <script src="assets/live2d.js"></script>-->
     <!-- waifu-tips.js 依赖 JQuery 库 -->
-    <script type="text/javascript" src="assets/jquery-3.4.1.js" ></script>
+    <script type="text/javascript" src="assets/jquery-3.4.1.min.js" ></script><!-- 加载缓慢 -->
 
     <!-- 实现拖动效果，需引入 JQuery UI -->
-    <script src="assets/jquery-ui.min.js?v=1.12.1"></script>
+    <!--    <script src="assets/jquery-ui.min.js?v=1.12.1"></script>--><!-- 加载缓慢 -->
 
     <script type="text/javascript" src="style/js/jquery.min.js"></script>
     <script type="text/javascript" src="style/js/disqus.js"></script>
     <!--右侧顶部返回跳转-->
-    <link rel="stylesheet" type="text/css" href="GoTop/css/szgotop.css" />
+    <link rel="stylesheet" type="text/css" href="GoTop/css/szgotop.min.css" />
     <script type="text/javascript" src="GoTop/js/szgotop.js"></script>
+    <!-- 个人栏随顶部走效果 -->
+    <link rel="stylesheet" href="/plugins/bootstrap/css/bootstrap.min.css"><!-- 加载缓慢 -->
+    <script src="/plugins/bootstrap/js/bootstrap.min.js"></script><!-- 加载缓慢 -->
     <!--vue相关依赖-->
-    <link rel="stylesheet" th:href="@{/plugins/bootstrap/css/bootstrap.min.css}">
-    <script th:src="@{/plugins/bootstrap/js/bootstrap.js}"></script>
-    <script th:src="@{/plugins/bootstrap/js/bootstrap.min.js}"></script>
-    <script th:src="@{/plugins/adminLTE/js/app.min.js}"></script>
-    <script th:src="@{/plugins/vue/vue.js}"></script>
-    <script th:src="@{/plugins/vue/vuejs-paginate.js}"></script>
-    <script th:src="@{/plugins/vue/vue-select.js}"></script>
-    <script th:src="@{/plugins/axios/axios.js}"></script>
-    <link rel="stylesheet" href="font-blog/css/base.css">
-<!--    <link href="https://www.itxst.com/package/ant-design-vue/antd.min.css" rel="stylesheet" />-->
-    <link href="plugins/antdesignvue/antd.min.css" rel="stylesheet" />
+    <!--    <script th:src="@{/plugins/adminLTE/js/app.min.js}"></script>-->
+    <script src="/plugins/vue/vue.min.js"></script>
+    <script src="/plugins/vue/vuejs-paginate.js"></script>
+    <script src="/plugins/vue/vue-select.js"></script>
+    <script src="/plugins/axios/axios.min.js"></script>
+    <script type="text/javascript" src="plugins/vue/vue-lazyload.js"></script>
+    <link rel="stylesheet" href="font-blog/css/base.min.css">
+    <!--    <link href="https://www.itxst.com/package/ant-design-vue/antd.min.css" rel="stylesheet" />-->
+<!--        <link href="plugins/antdesignvue/antd.min.css" rel="stylesheet" />&lt;!&ndash; 加载缓慢 &ndash;&gt;-->
     <!--页面标题显示-->
     <script type="text/javascript" id="hexo.configurations">var NexT = window.NexT || {}, CONFIG = {
         root: "",
@@ -185,7 +182,7 @@
    License: none (public domain)
 */
 
-        html, body, div, span, applet, object, iframe,
+        /*html, body, div, span, applet, object, iframe,
         h1, h2, h3, h4, h5, h6, p, blockquote, pre,
         a, abbr, acronym, address, big, cite, code,
         del, dfn, em, img, ins, kbd, q, s, samp,
@@ -204,7 +201,7 @@
             font-size: 100%;
             font: inherit;
             vertical-align: baseline;
-        }
+        }*/
         /* HTML5 display-role reset for older browsers */
         article, aside, details, figcaption, figure,
         footer, header, hgroup, menu, nav, section {
@@ -231,9 +228,9 @@
         .gallery{ width: 60px; height: 60px; position: fixed; z-index: 10; bottom: 60px; right: 20px;display:none; }
     </style>
     <!-- 顶部跳转条-->
-
-    <link rel='stylesheet' id='genericons-neue-css' href='lls/genericons-neue.css' type='text/css' media='screen'/>
-    <link rel='stylesheet' id='modern-stylesheet-custom-css' href='lls/custom-styles.css' type='text/css' media='screen'/>
+    <link rel="stylesheet" href="/plugins/top/dishi1yoavm.min.css" type='text/css' media="all"> <!-- 头部搜索-->
+    <link rel='stylesheet' id='genericons-neue-css' href='lls/genericons-neue.min.css' type='text/css' media='screen'/>
+    <link rel='stylesheet' id='modern-stylesheet-custom-css' href='lls/custom-styles.min.css' type='text/css' media='screen'/>
 
 </head>
 <body>
