--- a/boke/src/main/resources/templates/login.html
+++ b/boke/src/main/resources/templates/login.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="font-blog/base.css">
     <link rel="stylesheet" href="font-blog/element.css">
 </head>
-<body style="background:url(/style/images/blhx.png) no-repeat; background-size: cover;">
+<body style="background:url(/style/images/blhx.jpg) no-repeat; background-size: cover;">
 <div id="wrapper">
     <div style="width: 400px; margin: 150px auto; background-color:rgba(237,116,113,0.5); border-radius: 10px">
         <div style="width: 100%; height: 100px; font-size: 30px;line-height: 100px; text-align: center; color: #eee">欢迎登录墨白的博客系统</div>
@@ -20,7 +20,7 @@
                 <!--                    </div>-->
 
                 <input type="button" @click="login" id="log" style="height: 40px; padding: 10px; width: 100%; margin-top: 25px; background-color: mediumseagreen; color: white" value="登录">
-                <a style="width: 100%; text-align: right; display: inline-block; margin-top: 25px; color: #eee" href="register">还没账号？去注册</a>
+<!--                <a style="width: 100%; text-align: right; display: inline-block; margin-top: 25px; color: #eee" href="register">还没账号？去注册</a>-->
             </div>
 
         </div>
@@ -28,7 +28,7 @@
 </div>
 
 <script src="font-blog/js/jquery.min.js"></script>
-<script th:src="@{/plugins/vue/vue.js}"></script>
+<script th:src="@{/plugins/vue/vue.min.js}"></script>
 <script th:src="@{/plugins/vue/vuejs-paginate.js}"></script>
 <script th:src="@{/plugins/vue/vue-select.js}"></script>
 <script th:src="@{/plugins/axios/axios.js}"></script>
