--- a/boke/src/main/resources/templates/regist.html
+++ b/boke/src/main/resources/templates/regist.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="dist/css/flexDate.css">
 <!--    <link href="dist/js/prettify.min.css" rel="stylesheet">-->
 </head>
-<body style="background:url('style/images/blhx.png') no-repeat; background-size: cover;">
+<body style="background:url('style/images/blhx.jpg') no-repeat; background-size: cover;">
 <div id="wrapper">
     <div style="width: 400px; margin: 150px auto;background-color:rgba(100,149,237,0.5); border-radius: 10px">
         <div style="width: 100%; height: 100px; color: #eee; font-size: 30px;line-height: 100px; text-align: center">欢迎注册</div>
